--- a/contact.css
+++ b/contact.css
@@ -401,7 +401,8 @@ soc-info{
 		align-items: center;
 		/* padding-top: 30px; */
 		/* padding: 30px 20px 0px; */
-		padding: 30px 48px 0px 21px;
+		/* padding: 30px 48px 0px 21px; */
+		padding: 30px !important;
 	}
 
 	.contact-header .container .form .form-input,
@@ -595,7 +596,7 @@ soc-info{
   .contact-header .container .form,
   .contact-header .container .address {
     width: 100%;
-    /* padding: 28px; */
+    padding: 30px !important;
     /* padding: 0px 16px; */
 
     margin-bottom: 50px;
